Change: Move content loading plugin base class to the API
Allows us to set the properties of a plugin from another via the host interface. Required for route plugins, as these must communicate with the object / sound loaders

--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Objects\ObjectTypes\WorldSound.cs" />
     <Compile Include="Objects\Parsers\ObjParsers.cs" />
     <Compile Include="Objects\Parsers\XParsers.cs" />
+    <Compile Include="Plugins\ContentLoadingPlugin.cs" />
     <Compile Include="Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
