--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -56,7 +56,6 @@
     <Compile Include="CsvRwRouteParser.PreprocessOptions.cs" />
     <Compile Include="CsvRwRouteParser.RouteData.cs" />
     <Compile Include="CsvRwRouteParser.RouteFixes.cs" />
-    <Compile Include="CsvRwRouteParser.SignalData.cs" />
     <Compile Include="CsvRwRouteParser.Structures.cs" />
     <Compile Include="Namespaces\NameSpaces.cs" />
     <Compile Include="Namespaces\NonTrack\Cycle.cs" />
@@ -69,6 +68,10 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Expression.PositionedExpression.cs" />
+    <Compile Include="Structures\Signals\SignalData.Animated.cs" />
+    <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
+    <Compile Include="Structures\Signals\SignalData.Compatability.cs" />
+    <Compile Include="Structures\Signals\SignalData.cs" />
     <Compile Include="XML\DynamicBackground.cs" />
     <Compile Include="XML\DynamicLight.cs" />
     <Compile Include="XML\MarkerScript.cs" />
