--- a/source/OpenBVE/packages.config
+++ b/source/OpenBVE/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CS-Script.lib" version="3.29.0" targetFramework="net461" />
-  <package id="OpenTK" version="3.1.0" targetFramework="net461" />
-  <package id="SharpCompress" version="0.24.0" targetFramework="net461" />
+  <package id="CS-Script.lib" version="3.30.0" targetFramework="net461" />
+  <package id="OpenTK" version="3.2" targetFramework="net461" />
+  <package id="SharpCompress" version="0.25.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.0" targetFramework="net461" />
 </packages>
