--- a/source/Plugins/OpenBveAts/OpenBveAts.csproj
+++ b/source/Plugins/OpenBveAts/OpenBveAts.csproj
@@ -74,12 +74,15 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <PropertyGroup>
-	  <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
+    <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
 		  mkdir $(TargetDir)Data\Plugins\
 		  move /Y $(TargetDir)$(TargetName).* $(TargetDir)Data\Plugins\
 	  </PostBuildEvent>
-	  <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
+    <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
 		  mkdir -p $(TargetDir)Data/Plugins/
 		  mv -f $(TargetDir)$(TargetName).* $(TargetDir)Data/Plugins/
 	  </PostBuildEvent>
