--- a/source/Plugins/Sound.Vorbis/packages.config
+++ b/source/Plugins/Sound.Vorbis/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NAudio" version="1.9.0" targetFramework="net461" />
-  <package id="NAudio.Vorbis" version="1.0.0.0" targetFramework="net461" />
-  <package id="NVorbis" version="0.8.6" targetFramework="net461" />
+  <package id="NAudio" version="1.10.0" targetFramework="net461" />
+  <package id="NAudio.Vorbis" version="1.2.0" targetFramework="net461" />
+  <package id="NVorbis" version="0.10.1" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
