--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Structures\Expression.PositionedExpression.cs" />
     <Compile Include="Structures\Route\FreeObject.cs" />
     <Compile Include="Structures\Route\Station.Stop.cs" />
+    <Compile Include="Structures\Signals\Section.cs" />
     <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
     <Compile Include="XML\DynamicBackground.cs" />
     <Compile Include="XML\DynamicLight.cs" />
