--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -68,9 +68,12 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Expression.PositionedExpression.cs" />
+    <Compile Include="Structures\Route\Crack.cs" />
+    <Compile Include="Structures\Route\Form.cs" />
     <Compile Include="Structures\Route\FreeObject.cs" />
     <Compile Include="Structures\Route\Station.Stop.cs" />
     <Compile Include="Structures\Signals\Section.cs" />
+    <Compile Include="Structures\Signals\Signal.cs" />
     <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
     <Compile Include="XML\DynamicBackground.cs" />
     <Compile Include="XML\DynamicLight.cs" />
