--- a/source/LibRender2/LibRender2.csproj
+++ b/source/LibRender2/LibRender2.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Text\OpenGlFontChar.cs" />
     <Compile Include="Text\OpenGlFontTable.cs" />
     <Compile Include="Text\OpenGlString.cs" />
+    <Compile Include="Trains\CarSection.cs" />
+    <Compile Include="Trains\CarSection.Type.cs" />
     <Compile Include="Trains\ElementsGroup.cs" />
     <Compile Include="Trains\Panel\TouchElement.cs" />
     <Compile Include="Viewport\ViewportChangeModes.cs" />
