--- a/source/OpenBveApi/packages.config
+++ b/source/OpenBveApi/packages.config
@@ -3,5 +3,6 @@
   <package id="CS-Script.lib" version="3.29.0" targetFramework="net461" />
   <package id="OpenTK" version="3.1.0" targetFramework="net461" />
   <package id="SharpCompress" version="0.24.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Ude.NetStandard" version="1.2.0" targetFramework="net461" />
 </packages>
