--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Structures\Signals\Signal.cs" />
     <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
     <Compile Include="Structures\Signals\Transponder.cs" />
+    <Compile Include="Structures\Trains\Limit.cs" />
     <Compile Include="XML\DynamicBackground.cs" />
     <Compile Include="XML\DynamicLight.cs" />
     <Compile Include="XML\MarkerScript.cs" />
