--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Expression.PositionedExpression.cs" />
+    <Compile Include="Structures\Miscellaneous\PointOfInterest.cs" />
     <Compile Include="Structures\Route\Crack.cs" />
     <Compile Include="Structures\Route\Form.cs" />
     <Compile Include="Structures\Route\FreeObject.cs" />
