Change: Separate out more constructs

--- a/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
+++ b/source/Plugins/Route.CsvRw/Route.CsvRw.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CsvRwRouteParser.ApplyRouteData.cs" />
     <Compile Include="CsvRwRouteParser.CompatibilityObjects.cs" />
     <Compile Include="CsvRwRouteParser.cs" />
+    <Compile Include="Structures\Block.cs" />
     <Compile Include="Structures\Expression.cs" />
     <Compile Include="CsvRwRouteParser.Functions.cs" />
     <Compile Include="CsvRwRouteParser.ObjectDictionary.cs" />
@@ -73,15 +74,21 @@
     <Compile Include="Structures\Route\Crack.cs" />
     <Compile Include="Structures\Route\Form.cs" />
     <Compile Include="Structures\Route\FreeObject.cs" />
+    <Compile Include="Structures\Route\Pole.cs" />
+    <Compile Include="Structures\Route\Rail.cs" />
+    <Compile Include="Structures\Route\RailCycle.cs" />
     <Compile Include="Structures\Route\Station.Stop.cs" />
     <Compile Include="Structures\Route\WallDike.cs" />
     <Compile Include="Structures\Signals\Section.cs" />
     <Compile Include="Structures\Signals\Signal.cs" />
     <Compile Include="Structures\Signals\SignalData.BVE4.cs" />
     <Compile Include="Structures\Signals\Transponder.cs" />
+    <Compile Include="Structures\StructureData.cs" />
     <Compile Include="Structures\Trains\Brightness.cs" />
+    <Compile Include="Structures\Trains\DestinationEvent.cs" />
     <Compile Include="Structures\Trains\Limit.cs" />
     <Compile Include="Structures\Trains\Marker.cs" />
+    <Compile Include="Structures\Trains\StopRequest.cs" />
     <Compile Include="XML\DynamicBackground.cs" />
     <Compile Include="XML\DynamicLight.cs" />
     <Compile Include="XML\MarkerScript.cs" />
