--- a/source/Plugins/Sound.RiffWave/Sound.RiffWave.csproj
+++ b/source/Plugins/Sound.RiffWave/Sound.RiffWave.csproj
@@ -85,14 +85,10 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <PropertyGroup>
-	  <PostBuildEvent Condition=" '$(OS)' != 'Unix' ">
-		  mkdir $(TargetDir)Data\Plugins\
-		  move /Y $(TargetDir)$(TargetName).* $(TargetDir)Data\Plugins\
-	  </PostBuildEvent>
-	  <PostBuildEvent Condition=" '$(OS)' == 'Unix' ">
-		  mkdir -p $(TargetDir)Data/Plugins/
-		  mv -f $(TargetDir)$(TargetName).* $(TargetDir)Data/Plugins/
-	  </PostBuildEvent>
-  </PropertyGroup>
+  <Target Name="AfterBuild">
+    <ItemGroup>
+      <OutputFiles Include="$(TargetDir)$(TargetName).*" />
+    </ItemGroup>
+    <Move SourceFiles="@(OutputFiles)" DestinationFolder="$(TargetDir)Data\Plugins\" />
+  </Target>
 </Project>
